Fix header spacing

--- a/src/style/resources.css
+++ b/src/style/resources.css
@@ -50,15 +50,11 @@ can use the two classes connected together to style components that have both cl
 }
 
 /* Row */
-.rowContainer,
-.header {
+.rowContainer {
   display: flex;
   padding: 30px 40px;
   text-align: center;
   border-radius: 12px;
-}
-
-.rowContainer {
   background-color: var(--csm-resources);
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.2);
   margin: 16px auto;
@@ -68,6 +64,7 @@ can use the two classes connected together to style components that have both cl
 .table {
   margin: auto; /* better than just setting 0 20px because we don't want it stretched */
   max-width: 1064px; /* combine margin with max-width to maintain size */
+  min-width: 750px;
 }
 
 .header {
